[FEAT] Jwt Claims 전달 방식 수정 및 코드 정리