@@ -2,7 +2,6 @@ package com.programmers.smrtstore.core.properties;
 
 import static io.micrometer.common.util.StringUtils.isNotEmpty;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,11 +9,12 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.logging.log4j.util.Strings;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -32,52 +32,40 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
         FilterChain filterChain) throws ServletException, IOException {
 
-        if (SecurityContextHolder.getContext().getAuthentication() == null) {
-            String token = getToken(request);
-            if (token != null) {
-                try {
-                    Jwt.Claims claims = verify(token);
+        String token = Strings.isNotEmpty(request.getHeader(headerKey)) ? URLDecoder.decode(
+            request.getHeader(headerKey), StandardCharsets.UTF_8) : null;
 
-                    String username = claims.username;
-                    List<GrantedAuthority> authorities = getAuthorities(claims);
+        if (token != null) {
+            try {
+                var claims = jwt.verify(token);
 
-                    if (isNotEmpty(username) && !authorities.isEmpty()) {
-                        JwtAuthenticationToken authentication = new JwtAuthenticationToken(
-                            new JwtAuthentication(token, username), null, authorities
-                        );
-                        authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                        SecurityContextHolder.getContext().setAuthentication(authentication);
-                    }
-                } catch (Exception e) {
-                    log.warn("Jwt processing failed: {}", e.getMessage());
+                String username = claims.get("username").asString();
+                List<GrantedAuthority> authorities = getAuthorities(
+                    claims.get("roles").asArray(String.class));
+
+                if (isNotEmpty(username) && !authorities.isEmpty()) {
+                    JwtAuthenticationToken authentication = new JwtAuthenticationToken(
+                        JwtAuthentication.builder()
+                            .accessToken(token)
+                            .username(username)
+                            .build(), null, authorities
+                    );
+                    authentication.setDetails(
+                        new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
                 }
+            } catch (Exception e) {
+                log.warn("Jwt processing failed: {}", e.getMessage());
             }
         }
 
         filterChain.doFilter(request, response);
     }
 
-    private String getToken(HttpServletRequest request) {
-        String token = request.getHeader(headerKey);
-
-        if (isNotEmpty(token)) {
-            try {
-                return URLDecoder.decode(token, "UTF-8");
-            } catch (Exception ignored) {
-                // TODO:
-            }
-        }
-        return null;
-    }
-
-    private Jwt.Claims verify(String token) {
-        return jwt.verify(token);
-    }
-
-    private List<GrantedAuthority> getAuthorities(Jwt.Claims claims) {
-        String[] roles = claims.roles;
-        return roles == null || roles.length == 0
-            ? emptyList()
-            : Arrays.stream(roles).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+    private List<GrantedAuthority> getAuthorities(String[] roles) {
+        return roles == null || roles.length == 0 ? emptyList() : Arrays.stream(roles)
+            .map(SimpleGrantedAuthority::new)
+            .map(GrantedAuthority.class::cast)
+            .toList();
     }
 }
